# GLStuff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: DefaultDrawStrategy.hpp  Gui.hpp  IDrawStrategy.hpp  IObserver.hpp  ISubject.hpp  LightSource.hpp  LightSourceDrawStrategy.hpp  RenderContext.hpp  Scene.hpp  camera.hpp  ebo.hpp  imfilebrowser.h  lightSource.hpp  lighting.hpp  mesh.hpp  model.hpp  s_LightSettings.hpp  s_Matrices.hpp  s_MouseInput.hpp  scene.hpp  shader.hpp  texture.hpp  vao.hpp  vbo.hpp
include/glad/: glad.h
res/: fade.frag  shader.frag  shader.vert
res/Shaders/: fade.frag  shader.frag  uniform.frag
res/Shaders/lighting/: lit.frag
res/lighting/: lightSource.frag  lit.frag  lit.vert  litFinal.frag  litFlashLight.frag
src/: Camera.cpp  DefaultDrawStrategy.cpp  Gui.cpp  LightSource.cpp  LightSourceDrawStrategy.cpp  RenderContext.cpp  Scene.cpp  Shader.cpp  camera.hpp  ebo.cpp  lightSource.cpp  main.cpp  mesh.cpp  model.cpp  shader.cpp  shader.hpp  texture.cpp  vao.cpp  vbo.cpp
